--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
-language: objective-c
-xcode_project: PeekPan.xcodeproj
-xcode_scheme: PeekPan
 osx_image: xcode8
+language: objective-c
+before_install:
+ - gem install xcpretty 
+ - gem install xcpretty-travis-formatter
+script:
+ - set -o pipefail &&  xcodebuild -project PeekPan.xcodeproj -scheme PeekPan -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=10.0' build-for-testing | xcpretty -f `xcpretty-travis-formatter`
+ - set -o pipefail &&  xcodebuild -project PeekPan.xcodeproj -scheme PeekPan -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=10.0' test-without-building | xcpretty
