--- a/PeekPan.xcodeproj/xcshareddata/xcschemes/PeekPan.xcscheme
+++ b/PeekPan.xcodeproj/xcshareddata/xcschemes/PeekPan.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7FF13C8C1D8DB67E00600B7E"
+               BuildableName = "PeekPanTests.xctest"
+               BlueprintName = "PeekPanTests"
+               ReferencedContainer = "container:PeekPan.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
